Refactoring and JDoc comments. pom prepared to release to mvn central.